--- a/style.css
+++ b/style.css
@@ -11,3 +11,28 @@ ul {
     align-items: center;
     padding: 16px;
 }
+
+a{
+    color: wheat;
+    text-decoration: none;
+}
+
+ header img{
+    width: e0px;
+    height: 550px;
+    border-radius: 5%;
+}
+
+.center{
+    text-align: center;
+}
+
+h1 {
+    color:purple
+}
+
+footer img{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
