--- a/style.css
+++ b/style.css
@@ -35,4 +35,15 @@ footer img{
     width: 20px;
     height: 20px;
     border-radius: 50%;
-}
+}Os álbuns da Taylor Swift são:
+
+1. "Taylor Swift" (2006)
+
+2. "Fearless" (2008)
+…                
+8. "Folklore" (2020)
+
+9. "Evermore" (2020)
+ 
+10. 
+"Midningth" (2022)
