--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     color:wheat;
-    background-color: rgb(255, 5, 67);
+    background-color: red;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
@@ -31,19 +31,3 @@ h1 {
     color:purple
 }
 
-footer img{
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-}Os álbuns da Taylor Swift são:
-
-1. "Taylor Swift" (2006)
-
-2. "Fearless" (2008)
-…                
-8. "Folklore" (2020)
-
-9. "Evermore" (2020)
- 
-10. 
-"Midningth" (2022)
