--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .cabeçalho_lista {
-    background-color: green;
+    background-color: rgb(255, 101, 96);
     color: white;
     display: flex;
     justify-content: space-around;
