--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-size: 24px;
     }
     
-    .cabeçalho_imagem {
+    .img club {
     width: 25%;
     height: 25%;
     }
@@ -25,7 +25,7 @@
     padding: 24px 0;
     }
 
-    .lancamento_imagem{
+    .img maddona{
         width: 50%;
         height: 25%;
     }
