--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     padding: 24px 0;
     }
 
-    .img maddona{
-        width: 50%;
+    .footer {
+        width: 25%;
         height: 25%;
     }
